fix compile error fix logical error   in printBoard format code